# librepods-windows

./: .gitignore  README.md
windows/: ARCHITECTURE.md  BUILD_AND_TEST.md  BluetoothMonitor.cpp  BluetoothMonitor.h  CMakeLists.txt  QUICKSTART.md  README.md  autostartmanager.hpp  main.cpp  run_tests.ps1  systemsleepmonitor.hpp  trayiconmanager.cpp  trayiconmanager.h  windowssleepmonitor.cpp  windowssleepmonitor.hpp
windows/media/: mediacontroller.cpp  mediacontroller.h  playerstatuswatcher.cpp  playerstatuswatcher.h  windowsaudiocontroller.cpp  windowsaudiocontroller.h
windows/tests/: .gitignore  CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  README.md  TESTING_GUIDE.md  test_bluetooth_example.cpp  test_system_requirements.cpp
